hledger/test/errors/csvskipvalue.csv.rules
date %1
skip badval
